# docs/swagger.yaml
@@ -2,18 +2,24 @@ definitions:
   dto.AdminInfoOutput:
     properties:
       avatar:
+        description: 头像
         type: string
       id:
+        description: id
         type: integer
       introduction:
+        description: 简介
         type: string
       login_time:
+        description: 登录时间
         type: string
       roles:
+        description: 角色
         items:
           type: string
         type: array
       user_name:
+        description: 账户
         type: string
     type: object
   dto.AdminLoginInput:
@@ -41,6 +47,78 @@ definitions:
         type: string
     required:
     - password
+    type: object
+  dto.ServiceAddHTTPInput:
+    properties:
+      black_list:
+        description: 黑名单ip
+        type: string
+      clientip_flow_limit:
+        description: 客户端ip限流
+        type: integer
+      header_transfor:
+        description: Header头转换
+        type: string
+      ip_list:
+        description: ip列表
+        type: string
+      need_https:
+        description: 是否支持https
+        type: integer
+      need_strip_uri:
+        description: 启用strip_uri
+        type: integer
+      need_websocket:
+        description: 是否支持websocket
+        type: integer
+      open_auth:
+        description: 是否开启权限
+        type: integer
+      round_type:
+        description: 轮询方式
+        type: integer
+      rule:
+        description: 接入路径
+        type: string
+      rule_type:
+        description: 接入类型
+        type: integer
+      service_desc:
+        description: 服务描述
+        type: string
+      service_flow_limit:
+        description: 服务端ip限流
+        type: integer
+      service_name:
+        description: 服务名
+        type: string
+      upstream_connect_timeout:
+        description: 建立连接超时(秒)
+        type: integer
+      upstream_header_timeout:
+        description: 获取header超时(秒)
+        type: integer
+      upstream_idle_timeout:
+        description: 连接最大空闲时间(秒)
+        type: integer
+      upstream_max_idle:
+        description: 最大空闲连接数
+        type: integer
+      url_rewrite:
+        description: URL重写
+        type: string
+      weight_list:
+        description: 权重列表
+        type: string
+      white_list:
+        description: 白名单ip
+        type: string
+    required:
+    - ip_list
+    - rule
+    - service_desc
+    - service_name
+    - weight_list
     type: object
   dto.ServiceListItemOutput:
     properties:
@@ -222,6 +300,61 @@ paths:
       summary: 服务删除
       tags:
       - 服务管理
+  /service/service/http:
+    post:
+      consumes:
+      - application/json
+      description: 添加HTTP服务
+      operationId: /service/service/http/post
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceAddHTTPInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 添加HTTP服务
+      tags:
+      - 服务管理
+    put:
+      consumes:
+      - application/json
+      description: 修改HTTP服务
+      operationId: /service/service/http/put
+      parameters:
+      - description: body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ServiceAddHTTPInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            allOf:
+            - $ref: '#/definitions/middleware.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 修改HTTP服务
+      tags:
+      - 服务管理
   /service/service_list:
     get:
       consumes:
@@ -233,7 +366,7 @@ paths:
         in: query
         name: info
         type: string
-      - description: 每个个数
+      - description: 每页个数
         in: query
         name: page_size
         required: true
