# dto/service.go
@@ -5,6 +5,31 @@ import (
 	"github.com/jstang9527/gateway/public"
 )
 
+// ServiceAddHTTPInput ...
+type ServiceAddHTTPInput struct {
+	ServiceName            string `json:"service_name" form:"service_name" comment:"服务名" example:"" validate:"required,valid_service_name"`       //服务名
+	ServiceDesc            string `json:"service_desc" form:"service_desc" comment:"服务描述" example:"" validate:"required,max=255,min=1"`           //服务描述
+	RuleType               int    `json:"rule_type" form:"rule_type" comment:"接入类型" example:"" validate:"max=1,min=0"`                            //接入类型
+	Rule                   string `json:"rule" form:"rule" comment:"接入路径: 域名或者前缀" example:"" validate:"required,valid_rule"`                      //接入路径
+	NeedHTTPS              int    `json:"need_https" form:"need_https" comment:"支持https" example:"" validate:"max=1,min=0"`                       //是否支持https
+	NeedStripURI           int    `json:"need_strip_uri" form:"need_strip_uri" comment:"启用strip_uri" example:"" validate:"max=1,min=0"`           //启用strip_uri
+	NeedWebsocket          int    `json:"need_websocket" form:"need_websocket" comment:"是否支持websocket" example:"" validate:"max=1,min=0"`         //是否支持websocket
+	URLRewrite             string `json:"url_rewrite" form:"url_rewrite" comment:"URL重写" example:"" validate:"valid_url_rewrite"`                 //URL重写
+	HeaderTransfor         string `json:"header_transfor" form:"header_transfor" comment:"Header头转换" example:"" validate:"valid_header_transfor"` //Header头转换
+	OpenAuth               int    `json:"open_auth" form:"open_auth" comment:"是否开启权限" example:"" validate:"max=1,min=0"`                          //是否开启权限
+	BlackList              string `json:"black_list" form:"black_list" comment:"黑名单ip" example:"" validate:""`                                    //黑名单ip
+	WhiteList              string `json:"white_list" form:"white_list" comment:"白名单ip" example:"" validate:""`                                    //白名单ip
+	ClientIPFlowLimit      int    `json:"clientip_flow_limit" form:"clientip_flow_limit" comment:"客户端ip限流" example:"" validate:"min=0"`           //客户端ip限流
+	ServiceFlowLimit       int    `json:"service_flow_limit" form:"service_flow_limit" comment:"服务端ip限流" example:"" validate:"min=0"`             //服务端ip限流
+	RoundType              int    `json:"round_type" form:"round_type" comment:"轮询方式" example:"" validate:"max=3,min=0"`                          //轮询方式
+	IPList                 string `json:"ip_list" form:"ip_list" comment:"ip列表" example:"" validate:"required,valid_iplist"`                      //ip列表
+	WeightList             string `json:"weight_list" form:"weight_list" comment:"权重列表" example:"" validate:"required,valid_weightlist"`          //权重列表
+	UpstreamConnectTimeout int    `json:"upstream_connect_timeout" form:"connect_timeout" comment:"建立连接超时(秒)" example:"" validate:"min=0"`        //建立连接超时(秒)
+	UpstreamHeaderTimeout  int    `json:"upstream_header_timeout" form:"header_timeout" comment:"获取header超时(秒)" example:"" validate:"min=0"`      //获取header超时(秒)
+	UpstreamIdleTimeout    int    `json:"upstream_idle_timeout" form:"idle_timeout" comment:"连接最大空闲时间(秒)" example:"" validate:"min=0"`            //连接最大空闲时间(秒)
+	UpstreamMaxIdle        int    `json:"upstream_max_idle" form:"max_idle" comment:"最大空闲连接数" example:"" validate:"min=0"`                        //最大空闲连接数
+}
+
 // ServiceDeleteInput 服务删除
 type ServiceDeleteInput struct {
 	ID int64 `json:"id" form:"id" comment:"服务ID" example:"56" validate:"required"` // 服务ID
@@ -17,14 +42,19 @@ type ServiceListInput struct {
 	PageSize int    `json:"page_size" form:"page_size" comment:"每页条数" example:"20" validate:"required"` // 每页条数
 }
 
-// BindValidParam 校验方法,绑定结构体,校验参数
-func (a *ServiceListInput) BindValidParam(c *gin.Context) error {
-	return public.DefaultGetValidParams(c, a)
+// BindValidParam 校验新增参数,绑定结构体,校验参数
+func (s *ServiceAddHTTPInput) BindValidParam(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, s)
 }
 
-// BindValidParam 校验方法,绑定结构体,校验参数
-func (a *ServiceDeleteInput) BindValidParam(c *gin.Context) error {
-	return public.DefaultGetValidParams(c, a)
+// BindValidParam 校验请求方法,绑定结构体,校验参数
+func (s *ServiceListInput) BindValidParam(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, s)
+}
+
+// BindValidParam 校验删除参数,绑定结构体,校验参数
+func (s *ServiceDeleteInput) BindValidParam(c *gin.Context) error {
+	return public.DefaultGetValidParams(c, s)
 }
 
 // ServiceListOutput ...
